--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>This is a paragraph</p>
+    <p>This is a short paragraph</p>
     <p>This is another paragraph</p>
     <p>added 3rd paragraph</p>
     <p>This is another paragraph</p>
